name:                haskell-example-date
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/algas/haskell-example-date#readme
license:             BSD3
license-file:        LICENSE
author:              Masahiro Yamauchi
maintainer:          sgt.yamauchi@gmail.com
copyright:           Copyright: (c) 2017 Masahiro Yamauchi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Time.Wareki
  other-modules:       Data.Time.Wareki.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  other-modules:       WarekiSpec
                     , WarekiInternalSpec
                     , Data.Time.Wareki
                     , Data.Time.Wareki.Internal
  main-is:             Spec.hs
  build-depends:       base
                     , text
                     , time
                     , hspec
                     , haskell-example-date
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/algas/haskell-example-date
